# blog

./: .env.dev  .flake8  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: flake8.yml
MyBlogApplication/: asgi.py  settings.py  urls.py  wsgi.py
api/: pagination.py  serializers.py  test_blog_restapi.py  urls.py  views.py
blogApplication/: admin.py  apps.py  factories.py  factory.py  filters.py  models.py  orders.py  schema.py  test.py  test_blog.py  test_demo.py  types.py  urls.py
blogApplication/migrations/: 0001_initial.py  0002_color_fruit_delete_blog.py  0003_blogapp.py  0004_rename_itle_blogapp_title.py  0005_remove_fruit_color_delete_color_delete_fruit.py  0006_alter_blogapp_options_blogapp_author.py  0007_alter_blogapp_author.py  0008_alter_blogapp_options_remove_blogapp_created_date_and_more.py  0009_alter_blogapp_options_blogapp_created_date_and_more.py
configs/: settings.py  urls.py
tests/: test_blog_restapi.py  test_crud.py
