[tool.poetry]
name = "blog-app"
version = "0.1.0"
description = "A blog application with Django, Strawberry GraphQL, and PostgreSQL"
authors = ["Sushant <stha2022sushant@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
strawberry-graphql = "^0.256.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
